<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itmo.courseproject.GameConfigurationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/game_type"
            android:layout_gravity="center"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <RadioButton
            android:id="@+id/type_classic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_classic"
            android:onClick="onTypeSelected"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/type_fisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_fisher"
            android:onClick="onTypeSelected"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/game_color"
            android:layout_gravity="center"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">
        <RadioButton
            android:id="@+id/color_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_random"
            android:onClick="onColorSelected"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onColorSelected"
            android:text="@string/color_white"/>
        <RadioButton
            android:id="@+id/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onColorSelected"
            android:text="@string/color_black"/>
    </RadioGroup>

</LinearLayout>
